--- a/assets/sketch/index.html
+++ b/assets/sketch/index.html
@@ -17,15 +17,15 @@
 </head>
 <body>
 	<!-- library -->
-	<script type="text/javascript" src="./library/Three.js"></script>
-	<script type="text/javascript" src="./library/Loader.js"></script>
-	<script type="text/javascript" src="./library/Control.js"></script>
+	<script type="text/javascript" src="./library/Three.jsr"></script>
+	<script type="text/javascript" src="./library/Loader.jsr"></script>
+	<script type="text/javascript" src="./library/Control.jsr"></script>
 	<!-- preload -->
-	<script type="text/javascript" src="./_preload.js"></script>
+	<script type="text/javascript" src="./_preload.jsr"></script>
 	<!-- initialize -->
-	<script type="text/javascript" src="./_initialize.js"></script>
+	<script type="text/javascript" src="./_initialize.jsr"></script>
 	<!-- animate -->
-	<script type="text/javascript" src="./_animate.js"></script>
+	<script type="text/javascript" src="./_animate.jsr"></script>
 	<!-- events -->
 </body>
 </html>
